--- a/ChessBrowser/Components/Pages/About.razor
+++ b/ChessBrowser/Components/Pages/About.razor
@@ -2,4 +2,8 @@
 
 <PageTitle>About</PageTitle>
 
-Put README here or any info you need us to know while grading.
+Contributors: David Schiwal, Mahonri White
+Based on: Homework 6 starter
+Last updated: 3/6/2025
+
+Notes: Uploading is not optimized takes about 25 seconds for first file. Everything works correclty inserting game data is just a bit slow.
